Fix some broken css due to removal of voice stuff

--- a/webApp/src/main/resources/static/styles/starter.css
+++ b/webApp/src/main/resources/static/styles/starter.css
@@ -1,10 +1,9 @@
 body {
     height: 100%;
-    padding: 40px;
+    padding: 50px 40px 40px 40px;
 }
 
-.starter-template {
+.row {
     padding: 40px 15px;
-    text-align: center;
 }
 
